fix: replace removed WMIC with PowerShell CIM for LCU discovery (v1.3.2)
WMIC was removed in Windows 11 24H2+ (build 26xxx). The app scraped the
LeagueClientUx.exe command line via `wmic` to get the LCU port/token, so on
updated machines it failed with "League Client not found" while older builds
still worked.

- LCUAuth: query the client command line with `Get-CimInstance Win32_Process`
  (Microsoft's official WMIC replacement, present on all Win10+); keep wmic as
  a fallback for locked-down machines where PowerShell is restricted.
- RiftHelperMainController: pass the CIM-derived token/port to R4J's
  LCUSocketReader(token, port) constructor, so R4J stops calling WMIC itself
  for the event WebSocket (this was a second, hidden WMIC dependency).
- RiftHelperMain: detect client disconnect with a lightweight TCP connect
  instead of re-running the process query every 5s (no console-window flash).
- UpdateChecker: remove stray trailing newline in the version-check URL.
- Bump version to 1.3.2; add CLAUDE.md.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>